fix jp owner geo icon visibility

--- a/src/main/react/assets/styles/entityPage/entityPage.scss
+++ b/src/main/react/assets/styles/entityPage/entityPage.scss
@@ -11,8 +11,25 @@
 
 .entity-page-wrapper__main-entity-section {
   max-width: 800px;
+  display: flex;
   margin: 0 auto;
   padding-top: 50px;
+}
+
+.manage-entity-container__action-btn {
+  width: 30px;
+  height: 30px;
+  background: lighten($md-sys-color-primary-container-light, 2%);
+  padding: 5px;
+
+  &:hover {
+    background: $md-sys-color-primary-container-light;
+  }
+}
+
+.manage-entity-container__action-icon {
+  width: 100%;
+  height: 100%;
 }
 
 .entity-page__possible-related-persons-section {
