--- a/src/main/react/assets/styles/entityPage/jurPersonPage.scss
+++ b/src/main/react/assets/styles/entityPage/jurPersonPage.scss
@@ -39,7 +39,7 @@
   }
 }
 
-.owner-item__interact-container.disabled-geo .owner-item__location-btn-wrapper {
+.owner-item__interact-container.no-geo .owner-item__location-btn-wrapper {
   display: none;
 }
 
